plugins {
    id 'groovy'
    id 'java'
    id 'org.jetbrains.intellij' version '0.6.5'
}

group 'io.github.kings1990'
version '1.1.5'
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    maven { name "Alibaba"; url "https://maven.aliyun.com/repository/public" }
    mavenCentral()
}

dependencies {
    compile "org.projectlombok:lombok:1.18.18"
    compile "com.google.guava:guava:30.1-jre"
    compile "commons-beanutils:commons-beanutils:1.9.4"
    compile "org.springframework:spring-web:5.3.7"
    compile "com.alibaba:fastjson:1.2.76"
    compile "cn.hutool:hutool-all:5.6.5"
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    plugins = ['java', "com.intellij.properties", "com.intellij.java-i18n"]
    version '2021.1'
    updateSinceUntilBuild false
}
patchPluginXml {
    changeNotes """

    <h3>v1.1.5</h3>
    <ul>
        <li>support modify basic type value(基础类型默认值支持修改)</li>
        <li>fix response scroll issue(修复response滚动问题)</li>
        <li>add three string generate strategy(新增了3中string类型参数生成策略)</li>
        <li>optimal configuration guidance(优化配置引导)</li>
        <li>optimized the display of icons in dark and light themes(优化了暗色和淡色主题下图标的显示)</li>
        <li>18n support(国际化支持)</li>
        <li>optimal tool window layout(优化了工具窗口布局)</li>
    </ul>
    
    <h3>v1.1.4</h3>
    <ul>
        <li>curl support(支持curl拷贝)</li>
        <li>fix send request return error response parse error(修复发送消息异常情况下响应的解析)</li>
        <li>remove domain from url(移除了url上的域名)</li>
        <li>support add params to header from (支持了将参数从response添加到header)</li>
        <li>support pretty and raw response(响应支持美化和原文输出)</li>
        <li>optimize the interaction add/remove json params (优化了添加和删除json参数的交互)</li>
        <li>support expand and collapse json params(支持json参数的展开和收缩)</li>
        <li>support toggle request and response panel(支持伸缩请求和响应面板)</li>
        <li>fix some bugs(修复了一些bug)</li>
    </ul>
    
    <h3>v1.1.3</h3>
    <ul>
        <li>multipartFile support(文件上传支持)</li>
        <li>fix parameters alias bug(参数别名bug修复)</li>
        <li>fix generate array parameters(数组参数生成bug修复)</li>
        <li>controller url fixed variable can replace by config(控制器上的url支持变量替换)</li>
        <li>show tool window when click generate icon(点击图标弹出工具窗口)</li>
        <li>add shortcut to modify config(增加快速跳转至配置页面)</li>
        <li>beautify ui(美化ui)</li>
    </ul>
    
    <h3>v1.1.2</h3>
    <ul>
        <li>add line icon for method</li>
        <li>limit send button click frequency</li>
        <li>optimize response show large text</li>
    </ul>
    
    <h3>v1.1.1</h3>
    <ul>
        <li>fix some bugs</li>
        <li>params can delete batch</li>
    </ul>
    
    <h3>v1.1.0</h3>
    <ul>
        <li>support http request</li>
        <li>support modify and add params</li>
        <li>beautify ui</li>
        <li>fix some bugs</li>
    </ul>
    
    <h3>v1.0.0</h3>
    <ul>
        <li>support Springmvc/SpringBoot</li>
        <li>support custom domain</li>
        <li>support custom params</li>
    </ul>
    """
}
test {
    useJUnitPlatform()
}
runIde {
    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
}